--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <title>Title</title>
 </head>
 <body>
-  
+  <script>
+    'use strict';
+    function Animal(name) {
+      this.name = name;
+      console.log(this);
+    }
+
+    var animal = new Animal("ёжик");
+
+    Animal();
+  </script>
 </body>
 </html>
