--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
 </head>
 <body>
   <script>
-    'use strict';
-    function Animal(name) {
-      this.name = name;
-      console.log(this);
-    }
-
-    var animal = new Animal("ёжик");
-
-    Animal();
+    console.log("HELLO WORLD!");
   </script>
 </body>
 </html>
